<resources>
    <string name="app_name">Content</string>
    <string name="empty_accounts">No account available</string>
    <string name="general_login_server_title">Enter the address to connect to</string>
    <string name="general_login_server_hostname">www.example.com</string>
    <string name="general_login_server_next">Continue</string>
    <string name="general_login_server_done">Done</string>
    <string name="general_login_credentials_title">Enter your credentials</string>
    <string name="general_login_credentials_username">Username</string>
    <string name="general_login_credentials_password">Password</string>
    <string name="general_login_credentials_show_password">Show password</string>
    <string name="general_login_credentials_sign_in">activiti.alfresco.com</string>
    <string name="general_login_credentials_or">or</string>
    <string name="general_login_credentials_connect">Activiti onPremise</string>
    <string name="general_login_signed_in_title">Successfully signed in</string>
    <string name="general_login_account_added">Account added</string>
    <string name="general_login_account_name">Give this account a name (optional)</string>
    <string name="general_login_account_name_title">One last thing&#8230;</string>
    <string name="prompt_url">URL</string>
    <string name="general_login_check_server">Server validation</string>
    <string name="settings_userinfo">Account</string>
    <string name="settings_userinfo_account">Details</string>
    <string name="settings_userinfo_account_summary">Edit details</string>
    <string name="settings_userinfo_account_name">Name</string>
    <string name="settings_userinfo_account_name_summary">Edit account name</string>
    <string name="settings_account">Account Settings</string>
    <string name="home_signin">Sign In</string>
    <string name="home_account">I already have an account</string>
    <string name="home_helper">To learn more take a look at <a href="alfresco://view_help_guide/">our guide</a> in the Help area</string>
    <string name="account_wizard_alfresco_server">Content Services</string>
    <string name="account_wizard_or">or</string>
    <string name="account_wizard_alfresco_cloud">Content Services in the Cloud</string>
    <string name="account">Account</string>
    <string name="action_add_account">Add an account</string>
    <string name="account_username">Username</string>
    <string name="account_username_required_hint">Username (Required)</string>
    <string name="account_password">Password</string>
    <string name="account_password_required_hint">Password (Required)</string>
    <string name="account_hostname">Connect to</string>
    <string name="account_hostname_required_hint">Connection such as www.example.com (Required)</string>
    <string name="account_hostname_hint">www.example.com (Required)</string>
    <string name="account_description">Description</string>
    <string name="account_description_optional_hint">Description (Optional). By default it\'s Content Services</string>
    <string name="account_description_hint">Content Services (Optional)</string>
    <string name="account_advanced">Advanced</string>
    <string name="account_authentication">Account Authentication</string>
    <string name="account_https">HTTPS</string>
    <string name="account_https_on_hint">HTTPS on</string>
    <string name="account_https_off_hint">HTTPS off</string>
    <string name="account_verify">Verifying Account Information&#8230;</string>
    <string name="account_default_cloud">Content Services in the Cloud</string>
    <string name="account_default_onpremise">Content Services</string>
    <string name="wait_title">In progress</string>
    <string name="wait_message">Contacting your server&#8230;</string>
    <string name="geolocation">Geolocation</string>
    <string name="action_version">Versions</string>
    <string name="document_tags_header">Tags</string>
    <string name="document_version_header">Version</string>
    <string name="empty_download">No Files</string>
    <string name="search_form_hint">Enter your search term</string>
    <string name="optional">Optional</string>
    <string name="required">Required</string>
    <string name="field_required">(Required)</string>
    <string name="action_rename">Rename</string>
    <string name="menu_browse_root">Repository</string>
    <string name="menu_browse_sites">Sites</string>
    <string name="menu_browse_userhome">My Files</string>
    <string name="menu_browse_shared">Shared Files</string>
    <string name="menu_browse_site_finder">Site Finder</string>
    <string name="menu_browse_all_sites">All Sites</string>
    <string name="menu_browse_my_sites">My Sites</string>
    <string name="menu_browse_favorite_sites">Favorite Sites</string>
    <string name="menu_browse_activities">Activities</string>
    <string name="menu_search">Search</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_local_files">Local Files</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_view">Views</string>
    <string name="menu_help">Help</string>
    <string name="menu_prefs">Settings</string>
    <string name="upload_title">Upload&#8230;</string>
    <string name="upload_pick_document">Choose content&#8230;</string>
    <string name="accounts_manage">Accounts</string>
    <string name="accounts_details">Details</string>
    <string name="browse_documents">Browse Content</string>
    <string name="details">Details</string>
    <string name="metadata">Properties</string>
    <string name="preview">Preview</string>
    <string name="cloud_networks_empty">No networks available</string>
    <string name="manage_accounts">Manage accounts&#8230;</string>
    <string name="cloud_networks_switch">Switch networks&#8230;</string>
    <string name="cloud_authentication">Authentication</string>
    <string name="upload">Upload </string>
    <string name="upload_complete">Upload Complete.</string>
    <string name="upload_in_progress">Upload in progress&#8230;</string>
    <string name="update_complete">Update Complete.</string>
    <string name="update_in_progress">Update in progress&#8230;</string>
    <string name="error_unable_open_file_title">The file couldn\'t be opened.</string>
    <string name="error_unable_open_file">This file format isn\'t supported. You need to install an app that can read it.</string>
    <string name="unlike">Unlike</string>
    <string name="error_retrieve_likes">The Like/Unlike tag for this content couldn\'t be retrieved.</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="share_content">Share Content with&#8230;</string>
    <string name="docs_prefix" translatable="false" />
    <string name="version_number">Version</string>
    <string name="buildnumber_version">Version: </string>
    <string name="sdknumber_version">SDK: </string>
    <string name="about_description">
<![CDATA[
    <p>Alfresco Content Services provides open, flexible, highly scalable Enterprise Content Management (ECM) - which makes it easy to access and collaborate on content wherever you are.</p>

    <p>The Alfresco Content Services mobile app gives you fast, secure access to your Alfresco content and associated workflow processes. It works with Alfresco Content Services, Alfresco Community Edition (4.2 and above) and Alfresco Content Services in the Cloud.</p>

    <p>This mobile application connects using your Alfresco Content Services login credentials (over HTTP or HTTPS), and manages access based on your permissions.</p>
]]>
    </string>
    <string name="send_email">Share attachment</string>
    <string name="link_or_attach">Do you want to share this as an attachment or a clickable link?</string>
    <string name="full_attachment">Attachment</string>
    <string name="link_to_repo">Clickable link</string>
    <string name="email_content"><![CDATA[<!DOCTYPE html><html><body>Send with <a href="http://play.google.com/store/apps/details?id=org.alfresco.mobile.android.application">Alfresco Content Services</a></body></html>]]></string>
    <plurals name="delete_items">
        <item quantity="one">Are you sure you want to delete \"%s\"?</item>
        <item quantity="other">Are you sure you want to delete \"%s\" items?</item>
    </plurals>
    <string name="delete_description_data_protection">Data protection is on.\n\nIf you delete this account your content will be unprotected.\n\nAre you sure you want to delete \"%s\"?</string>
    <string name="delete_in_progress">Delete in progress&#8230;</string>
    <string name="delete_complete">Delete complete</string>
    <string name="delete_sucess">\"%s\" has been successfully deleted.</string>
    <string name="save_back_description">\"%s\" has been modified. Do you want to upload this new version?</string>
    <string name="update_sucess">\"%s\" has been updated successfully.</string>
    <string name="no_voice_recorder">You don\'t have a voice recorder on this device</string>
    <string name="cannot_capture">Can\'t complete the capturing of this information</string>
    <string name="open_play_store">Open Google Play Store</string>
    <string name="create_document">Create&#8230;</string>
    <string name="create_document_title">Create&#8230;</string>
    <string name="create_document_name_hint">Type the file name here</string>
    <string name="create_document_filename_error">This name is already in use.</string>
    <string name="create_document_editor_title">Complete action using</string>
    <string name="create_document_editor_not_available">No application available</string>
    <string name="create_document_editor_not_available_description">You don\'t have an app that will create this file type.</string>
    <string name="preview_unavailable">Preview not available.</string>
    <string name="sdinaccessible">SD card must be accessible for this operation</string>
    <string name="loginfirst">Login to an Alfresco Content Services account first</string>
    <string name="comment_add_hint">Add your comment here&#8230;</string>
    <string name="data_protection">Data Protection</string>
    <string name="data_protection_blurb"><![CDATA[<p><b>Data protection is available.</b><br/> Do you want to turn it on? <p>  All content downloaded from Alfresco Content Services accounts will be encrypted and can only be viewed in the Alfresco Content Services app. ]]></string>
    <string name="decryption_failed">Decryption failed</string>
    <string name="passcode_title">Enter Passcode</string>
    <string name="passcode_preference">Passcode Protection</string>
    <string name="settings">Settings</string>
    <string name="settings_enterprise">Enterprise Settings</string>
    <string name="settings_privatefolder_summary">Data protection makes content downloaded from this app to be readable only in the Alfresco Content Services app. (Enterprise customers only)</string>
    <string name="settings_privatefolder_title">Data Protection</string>
    <string name="settings_custom_menu">Customization</string>
    <string name="settings_custom_menu_summary">Select which tabs are available on your menu.</string>
    <string name="settings_custom_menu_manage">Menu</string>
    <string name="menu_favorites">Favorites</string>
    <string name="synced_content">Synced Content</string>
    <string name="notifications">Notifications</string>
    <string name="my_tasks">My Tasks</string>
    <string name="action_required">Action required !</string>
    <string name="download_app_text">Download the new App before the 30th of November 2022 to continue using Alfresco Content Services on your phone. \n\nAfter the 30th of November 2022 this app will no longer be supported on the App store.</string>
    <string name="take_me_there">Take me there</string>
    <string name="label_dismiss">Dismiss</string>
</resources>