<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2005-2013 Alfresco Software Limited.
  
  This file is part of Alfresco Mobile for Android.
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="generalPreferences"
    android:title="@string/settings">
    <PreferenceCategory android:title="@string/settings_enterprise">
        <Preference
            android:key="privatefoldersbutton"
            android:summary="@string/settings_privatefolder_summary"
            android:title="@string/settings_privatefolder_title" />
        <Preference
            android:key="@string/passcode_title"
            android:title="@string/passcode_preference" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/custom_menu_group"
        android:title="@string/settings_custom_menu">
        <Preference
            android:key="@string/custom_menu_manage"
            android:summary="@string/settings_custom_menu_summary"
            android:title="@string/settings_custom_menu_manage" />
    </PreferenceCategory>
</PreferenceScreen>