<!--
  ~  Copyright (C) 2005-2015 Alfresco Software Limited.
  ~
  ~ This file is part of Alfresco Activiti Mobile for Android.
  ~
  ~ Alfresco Activiti Mobile for Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Alfresco Activiti Mobile for Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with Alfresco. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/d_16"
            android:paddingRight="@dimen/d_16">

            <TextView
                style="@style/AlfrescoMaterialTheme.Text.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:gravity="center"
                android:paddingTop="@dimen/d_16"
                android:paddingBottom="@dimen/d_8"
                android:text="@string/general_login_server_title" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/signing_hostname"
                android:textCursorDrawable="@drawable/accent_cursor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/general_login_server_hostname"
                app:met_floatingLabelText=""
                app:met_floatingLabel="highlight"
                android:inputType="text"
                app:met_primaryColor="@color/accent" />

            <CheckBox
                android:id="@+id/signing_https"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_url"
                android:singleLine="true"
                android:text="HTTPS" />


            <LinearLayout
                android:id="@+id/account_action_server_container"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/d_16"
                android:background="@color/accent"
                android:gravity="bottom"
                android:measureWithLargestChild="true"
                android:orientation="horizontal"
                android:paddingLeft="2dip"
                android:paddingRight="2dip"
                android:paddingTop="0dip">

                <Button
                    android:id="@+id/account_action_server"
                    style="@style/AlfrescoMaterialTheme.Text.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/alfrescohololight_item_background_holo_light"
                    android:gravity="center"
                    android:text="@string/general_login_server_next"
                    android:textColor="@color/secondary_background" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>



